k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aa-82212582
  namespace: '82212582'
spec:
  selector:
    app: aa-82212582
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
